## ① 整合SpringSession, + session完成共享问题； + 登录后，访问auth.gulimall.com/login.html能自动重定向到gulimall.com中； + 放大子域的作用域【详看GulimallSessionConfig.java】
## ② 补充页面效果
+ gulimall.com;item;search;等页面的session问题。
+ ”注册“；”访问login“等选项的src修正

--- a/gulimall-auth-server/pom.xml
+++ b/gulimall-auth-server/pom.xml
@@ -63,6 +63,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!--整合SpringSession完成session共享问题
+         遵循微服务自制原则-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
