--- a/gulimall_product/pom.xml
+++ b/gulimall_product/pom.xml
@@ -111,6 +111,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--整合SpringSession完成session共享问题
+ 遵循微服务自制原则-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
