--- a/gulimall-auth-server/src/main/resources/application.properties
+++ b/gulimall-auth-server/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.thymeleaf.cache=false
 ## redis
 spring.redis.host=192.168.31.106
 spring.redis.port=6379
+## \u914D\u7F6EspringSession
+    ## \u8BA9redis\u4FDD\u5B58session
+spring.session.store-type=redis
+    ## session\u8FC7\u671F\u65F6\u95F4
+server.servlet.session.timeout=30m
+
