--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>gulimall-third-party</module>
         <module>gulimall_search</module>
         <module>gulimall-auth-server</module>
+        <module>gulimall-test-sso-server</module>
     </modules>
 
 
