--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>gulimall_search</module>
         <module>gulimall-auth-server</module>
         <module>gulimall-test-sso-server</module>
+        <module>gulimall-cart</module>
     </modules>
 
 
