--- a/gulimall-cart/src/main/resources/application.properties
+++ b/gulimall-cart/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.redis.host=192.168.31.106
 
 ## springSession
 spring.session.store-type=redis
+
+## \u7EBF\u7A0B\u6C60
+gulimall.thread.core-size=20
+gulimall.thread.max-size=200
+gulimall.thread.keep-alive-time=10
