--- a/gulimall_order/pom.xml
+++ b/gulimall_order/pom.xml
@@ -46,6 +46,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <!--引入RabbitMQ的amqp场景使用器-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
