--- a/gulimall_product/src/main/resources/application.yml
+++ b/gulimall_product/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
     alicloud:
-      access-key: LTAI5tMRYRKGwEQD3Gjexogq
-      secret-key: SQXXvsVa01dAyXaldoUAQ5pZSPNnVm
+      access-key: {access-key]
+      secret-key: {secret-key}
       oss:
         endpoint: oss-cn-guangzhou.aliyuncs.com
     # jackson : 指定格式化时间戳
