① 订单结算 ② Feign调用问题处理：同步和异步的远程调用

--- a/gulimall_gateway/src/main/resources/application.yml
+++ b/gulimall_gateway/src/main/resources/application.yml
@@ -60,6 +60,12 @@ spring:
           predicates:
             - Host=cart.gulimall.com
 
+        ## 订单服务，gulimall-order
+        - id: gulimall-order
+          uri: lb://gulimall-order
+          predicates:
+            - Host=order.gulimall.com
+
         ## 把前端请求发送到renren-fast服务
         - id: admin_route
           ## lb：负载均衡
