--- a/gulimall_order/src/main/resources/application.properties
+++ b/gulimall_order/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+## \u81EA\u5B9A\u4E49\u7EBF\u7A0B\u6C60\u914D\u7F6E\u5C5E\u6027
+gulimall.thread.core-size=20
+gulimall.thread.max-size=200
+gulimall.thread.keep-alive-time=10
