--- a/gulimall_order/src/main/resources/application.yml
+++ b/gulimall_order/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 9000
 
 spring:
+  redis:
+    host: 192.168.31.106
   datasource:
     username: root
     password: root
@@ -28,6 +30,12 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual
+  ## thymeleaf
+  thymeleaf:
+    cache: false
+  ## session
+  session:
+    store-type: redis
 
   # nacos注册中心需要每个服务都有对应应用的名字
   application:
