--- a/gulimall_gateway/src/main/resources/application.yml
+++ b/gulimall_gateway/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>.*),/$\{segment}
 
-        ## member会员服务
+        ## 库存服务
         - id: ware_route
           uri: lb://gulimall-ware
           predicates:
