--- a/gulimall-cart/pom.xml
+++ b/gulimall-cart/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>gulimall_common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--引入redis依赖-->
         <dependency>
