--- a/gulimall_common/pom.xml
+++ b/gulimall_common/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
 
+        <!--seata依赖-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
         <!--mybatis-plus-->
         <dependency>
             <groupId>com.baomidou</groupId>
