--- a/gulimall_search/pom.xml
+++ b/gulimall_search/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>gulimall_common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--引入thymeleaf-->
         <dependency>
