--- a/gulimall_product/src/main/resources/application.yml
+++ b/gulimall_product/src/main/resources/application.yml
@@ -12,9 +12,10 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    ##阿里云通用的access-key
     alicloud:
-      access-key: {access-key]
-      secret-key: {secret-key}
+      access-key: LTAI5tMRYRKGwEQD3Gjexogq
+      secret-key: SQXXvsVa01dAyXaldoUAQ5pZSPNnVm
       oss:
         endpoint: oss-cn-guangzhou.aliyuncs.com
     # jackson : 指定格式化时间戳
