--- a/gulimall_product/src/main/resources/application.yml
+++ b/gulimall_product/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
         server-addr: 127.0.0.1:8848
     ##阿里云通用的access-key
     alicloud:
-      access-key: LTAI5tMRYRKGwEQD3Gjexogq
-      secret-key: SQXXvsVa01dAyXaldoUAQ5pZSPNnVm
+      access-key: 个人access-key
+      secret-key: 个人secret-key
       oss:
         endpoint: oss-cn-guangzhou.aliyuncs.com
     # jackson : 指定格式化时间戳
