订单服务-下单&关单&锁/解库存

--- a/gulimall_order/src/main/resources/application.yml
+++ b/gulimall_order/src/main/resources/application.yml
@@ -30,6 +30,9 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual
+        retry:
+          initial-interval: 10000ms
+          max-attempts: 3
   ## thymeleaf
   thymeleaf:
     cache: false
